<resources>
    <string name="app_name">Ej1Formulario</string>
    <string name="email">email</string>
    <string name="he_le_do_y_estoy_de_acuerdo_con_los_t_rminos_y_condiciones">He leído y estoy de acuerdo con los términos y condiciones</string>
    <string name="celular">Celular</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarme">Registrarme</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
</resources>
